clear checkbox and css grid.

--- a/checkbox.html
+++ b/checkbox.html
@@ -39,7 +39,7 @@
                             <h4>1. 你喜欢的旅游胜地？</h4>
                             <div>
                                 <div class="ui-checkbox mr1">
-                                    <input type="checkbox" checked="checked" id="unique-id">
+                                    <input type="checkbox" checked="checked" disabled="disabled" id="unique-id">
                                     <label for="unique-id">香港</label>
                                 </div>
                                 <div class="ui-checkbox mr1">
@@ -53,15 +53,15 @@
                             </div>
                             <h4>2. 你喜欢的菜系？</h4>
                             <div>
-                                <div class="ui-checkbox block mb1">
+                                <div class="ui-checkbox ui-block mb1">
                                     <input type="checkbox" id="unique-id-4">
                                     <label for="unique-id-4">川菜</label>
                                 </div>
-                                <div class="ui-checkbox block mb1">
+                                <div class="ui-checkbox ui-block mb1">
                                     <input type="checkbox" checked="checked" id="unique-id-5">
                                     <label for="unique-id-5">鲁菜</label>
                                 </div>
-                                <div class="ui-checkbox block mb1">
+                                <div class="ui-checkbox ui-block mb1">
                                     <input type="checkbox" id="unique-id-6">
                                     <label for="unique-id-6">淮扬菜</label>
                                 </div>
@@ -75,15 +75,15 @@
                         <div class="example">
                             <h4>1. 你喜欢你工作的公司吗？</h4>
                             <div>
-                                <div class="ui-radio block mb1">
+                                <div class="ui-radio ui-block mb1">
                                     <input type="radio" checked="checked" id="unique-id-7" name="company">
                                     <label for="unique-id-7">喜欢</label>
                                 </div>
-                                <div class="ui-radio block mb1">
+                                <div class="ui-radio ui-block mb1">
                                     <input type="radio" id="unique-id-8" name="company">
                                     <label for="unique-id-8">没感觉</label>
                                 </div>
-                                <div class="ui-radio block mb1">
+                                <div class="ui-radio ui-block mb1">
                                     <input type="radio" id="unique-id-9" name="company">
                                     <label for="unique-id-9">不喜欢</label>
                                 </div>
@@ -169,35 +169,35 @@
                             自定义尺寸。
                         </p>
                         <div class="example">
-                            <div class="ui-slider large block mb2">
+                            <div class="ui-slider ui-large ui-block mb2">
                                 <input type="checkbox" name="walk" id="slider-large" />
                                 <label for="slider-large">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-slider huge block mb2">
+                            <div class="ui-slider ui-big ui-block mb2">
                                 <input type="checkbox" name="walk" id="slider-huge" />
                                 <label for="slider-huge">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-toggle large block mb2">
+                            <div class="ui-toggle ui-large ui-block mb2">
                                 <input type="checkbox" name="walk" id="toggle-large" />
                                 <label for="toggle-large">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-toggle huge block mb2">
+                            <div class="ui-toggle ui-big ui-block mb2">
                                 <input type="checkbox" name="walk" id="toggle-huge" />
                                 <label for="toggle-huge">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-radio block large mb2">
+                            <div class="ui-radio ui-block ui-large mb2">
                                 <input type="radio" id="unique-id-large-1" name="company">
                                 <label for="unique-id-large-1">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-radio block huge mb2">
+                            <div class="ui-radio ui-block ui-big mb2">
                                 <input type="radio" id="unique-id-huge-1" name="company">
                                 <label for="unique-id-huge-1">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-checkbox block large mb2">
+                            <div class="ui-checkbox ui-block ui-large mb2">
                                 <input type="checkbox" id="unique-id-large-2" >
                                 <label for="unique-id-large-2">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-checkbox block huge mb2">
+                            <div class="ui-checkbox ui-block ui-big mb2">
                                 <input type="checkbox" id="unique-id-huge-2" >
                                 <label for="unique-id-huge-2">Allow others to see when your dog is on a walk</label>
                             </div>
