--- a/css-grid.html
+++ b/css-grid.html
@@ -20,6 +20,8 @@
                     <li><a href="#css-grid-24">栅格24等分</a></li>
                     <li><a href="#css-grid-golden-ratio">黄金分割</a></li>
                     <li><a href="#css-grid-custom">自定义栅格划分比例</a></li>
+                    <li><a href="#css-grid-offset">栅格偏移</a></li>
+                    <li><a href="#css-grid-center">栅格居中</a></li>
                     <li><a href="#css-grid-responsive">响应式布局</a></li>
                     <li><a href="#css-grid-linerize">线性化</a></li>
                 </ul>
@@ -204,6 +206,49 @@
                                 <div class="ui-g mb1">
                                     <div class="ui-u-1">
                                         24/24
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <h3 id="css-grid-offset">栅格偏移</h3>
+                        <p>
+                            栅格偏移
+                        </p>
+                        <div class="example">
+                            <div class="grid-demo">
+                                <div class="ui-g mb1">
+                                    <div class="ui-offset-4-5 ui-u-1-5">
+                                        1/5
+                                    </div>
+                                </div>
+                                <div class="ui-g mb1">
+                                    <div class="ui-offset-3-5 ui-u-2-5">
+                                        2/5
+                                    </div>
+                                </div>
+                                <div class="ui-g mb1">
+                                    <div class="ui-offset-2-5 ui-u-3-5">
+                                        3/5
+                                    </div>
+                                </div>
+                                <div class="ui-g mb1">
+                                    <div class="ui-offset-1-5 ui-u-4-5">
+                                        4/5
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h3 id="css-grid-center">栅格居中</h3>
+                        <p>
+                            栅格居中。
+                        </p>
+                        <div class="example">
+                            <div class="grid-demo">
+                                <div class="ui-g mb1">
+                                    <div class="ui-block-center ui-u-1-5">
+                                        1/5
                                     </div>
                                 </div>
                             </div>
