update input and button unit.

--- a/input.html
+++ b/input.html
@@ -158,7 +158,7 @@
                                 <div class="ui-input action small">
                                     <div class="ui-action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
-                                        <button type="button" class="ui-button"><i class="ui-icon fa fa-caret-down"></i></button>
+                                        <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
                                     </div>
                                     <input type="text" placeholder="small"  />
                                 </div>
@@ -167,7 +167,7 @@
                                 <div class="ui-input action large">
                                     <div class="ui-action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
-                                        <button type="button" class="ui-button"><i class="ui-icon fa fa-caret-down"></i></button>
+                                        <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
                                     </div>
                                     <input type="text" placeholder="large"  />
                                 </div>
@@ -176,7 +176,7 @@
                                 <div class="ui-input action massive">
                                     <div class="ui-action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
-                                        <button type="button" class="ui-button"><i class="ui-icon fa fa-caret-down"></i></button>
+                                        <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
                                     </div>
                                     <input type="text" placeholder="massive"  />
                                 </div>
