change some prefix.

--- a/checkbox.html
+++ b/checkbox.html
@@ -14,7 +14,7 @@
     <body class="p2">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator-features" class="list-unstyled">
+                <ul id="navigator-features" class="ui-list-unstyled">
                     <li><a href="#checkbox">复选框（Checkbox）</a></li>
                     <li><a href="#radiobox">Radiobox（单选框）</a></li>
                     <li><a href="#system-default">系统默认（System Default）</a></li>
