--- a/css-grid.html
+++ b/css-grid.html
@@ -14,7 +14,7 @@
     <body class="p2">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator-features" class="list-unstyled">
+                <ul id="navigator-features" class="ui-list-unstyled">
                     <li><a href="#css-grid-simple">简单栅格</a></li>
                     <li><a href="#css-grid-5">栅格5等分</a></li>
                     <li><a href="#css-grid-24">栅格24等分</a></li>
