--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
     <body class="p2">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator-features" class="list-unstyled">
+                <ul id="navigator-features" class="ui-list-unstyled">
                     <li><a href="#form-stacked">简单表单</a></li>
                     <li><a href="#form-inline">单行表单（Row Inline Form）</a></li>
                     <li><a href="#form-complex">复杂表单（Complex Form）</a></li>
@@ -195,7 +195,7 @@
                                             <label for="submit1">全选</label>
                                         </div>
                                     </div>
-                                    <ul class="list-unstyled ml1">
+                                    <ul class="ui-list-unstyled ml1">
                                         <li>
                                             <div class="ui-checkbox">
                                                 <input type="checkbox" id="teacher">
