--- a/input.html
+++ b/input.html
@@ -14,7 +14,7 @@
     <body class="p2">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator-features" class="list-unstyled">
+                <ul id="navigator-features" class="ui-list-unstyled">
                     <li><a href="#input-standard">普通输入框</a></li>
                     <li><a href="#input-states">输入框状态</a></li>
                     <li><a href="#input-with-icon">输入框和图标</a></li>
@@ -138,7 +138,7 @@
                         <h3 id="input-buttons">输入框和按钮</h3>
                         <div class="example">
                             <div class="ui-input action">
-                                <div class="ui-action-container">
+                                <div class="action-container">
                                     <button class="ui-button"><i class="ui-icon fa fa-users"></i></button>
                                 </div>
                                 <input type="text" placeholder="massive"  />
@@ -146,7 +146,7 @@
                             
                             <div class="ui-input action mt1">
                                 <input type="text" placeholder="massive"  />
-                                <div class="ui-action-container">
+                                <div class="action-container">
                                     <button class="ui-button"><i class="ui-icon fa fa-users"></i></button>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                         <div class="example">
                             <div class="mt1">
                                 <div class="ui-input action small">
-                                    <div class="ui-action-container ui-button-group">
+                                    <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
                                         <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
                                     </div>
@@ -165,7 +165,7 @@
                             </div>
                             <div class="mt1">
                                 <div class="ui-input action large">
-                                    <div class="ui-action-container ui-button-group">
+                                    <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
                                         <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
                                     </div>
@@ -174,7 +174,7 @@
                             </div>
                             <div class="mt1">
                                 <div class="ui-input action massive">
-                                    <div class="ui-action-container ui-button-group">
+                                    <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
                                         <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
                                     </div>
