--- a/label.html
+++ b/label.html
@@ -11,7 +11,7 @@
         <h1 class="align-center">标签</h1>
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator" class="list-unstyled">
+                <ul id="navigator" class="ui-list-unstyled">
                     <li><a href="index.html">Get Started</a></li>
                     <li><a href="button.html">按钮</a></li>
                     <li><a href="#">布局网格</a></li>
