--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
     <body class="p2">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator-features" class="list-unstyled">
+                <ul id="navigator-features" class="ui-list-unstyled">
                     <li><a href="#menu">横向菜单</a></li>
                     <li><a href="#menu-hoverable">横向菜单附加Hover下拉</a></li>
                     <li><a href="#menu-vetical">纵向菜单</a></li>
