--- a/type.html
+++ b/type.html
@@ -15,7 +15,7 @@
     <body class="p2">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator-features" class="list-unstyled">
+                <ul id="navigator-features" class="ui-list-unstyled">
                     <li><a href="#type-headings">Headings - 标题</a></li>
                     <li><a href="#type-a">Anchor - 链接</a></li>
                     <li><a href="#type-p">Paragraphs - 段落</a></li>
@@ -63,7 +63,7 @@
                         <h3 id="type-p">Paragraphs - 段落</h3>
                         <div class="example">
                             <h2 class="align-center">荷塘月色 <small>朱自清</small></h2>
-                            <p class="indent">
+                            <p class="ui-indent">
                                 月光如流水一般，静静地泻在这一片叶子和花上。薄薄的青雾浮起在荷塘里。叶子和花仿佛在牛乳中洗过一样；又像笼着轻纱的梦。虽然是满月，天上却有一层淡淡的云，所以不能朗照；但我以为这恰是到了好处——酣眠固不可少，小睡也别有风味的。月光是隔了树照过来的，高处丛生的灌木，落下参差的斑驳的黑影，峭楞楞如鬼一般；弯弯的杨柳的稀疏的倩影，却又像是画在荷叶上。塘中的月色并不均匀；但光与影有着和谐的旋律，如梵婀玲上奏着的名曲。
                             </p>
                         </div>
@@ -74,16 +74,16 @@
                                 下江陵<small> -- 李白</small>
                             </h4>
                             <div class="align-center">
-                                <p class="center-block song">
+                                <p class="center-block ui-song">
                                     朝辞白帝彩云间，
                                 </p>
-                                <p class="center-block hei">
+                                <p class="center-block ui-hei">
                                     千里江陵一日还。 
                                 </p>
-                                <p class="center-block fang-song">
+                                <p class="center-block ui-fang-song">
                                     两岸猿声啼不住， 
                                 </p>
-                                <p class="center-block kai">
+                                <p class="center-block ui-kai">
                                     轻舟已过万重山。
                                 </p>
                             </div>
@@ -225,7 +225,7 @@ inline code
                         </div>
                         <h4>Unstyled List</h4>
                         <div class="example">
-                            <ul class="list-unstyled">
+                            <ul class="ui-list-unstyled">
                                 <li>Lorem ipsum dolor sit amet</li>
                                 <li>Consectetur adipiscing elit</li>
                                 <li>Integer molestie lorem at massa</li>
