--- a/button.html
+++ b/button.html
@@ -14,7 +14,7 @@
     <body class="p2">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator-features" class="list-unstyled">
+                <ul id="navigator-features" class="ui-list-unstyled">
                     <li><a href="#button-standard">普通文字按钮</a></li>
                     <li><a href="#button-icon">图标按钮</a></li>
                     <li><a href="#button-icon-text">图标和文字按钮</a></li>
