--- a/home.html
+++ b/home.html
@@ -10,19 +10,7 @@
     <body class="p2">
         <h2 class="align-center no-mt">ESF</h2>
         <p>
-            ESF是一个样式框架，它基于est。为开发者提供了一套可以简单定制的CSS样式。它应该是度量衡项目的一个部分。
-        </p>
-        <p>
-            项目代号：度量衡
-        </p>
-        <p>
-            代号寓意：春秋战国时期，群雄并立，各国度量衡大小不一。秦始皇统一全国后，推行“一法度衡石丈尺，车同轨 ，书同文字”，颁发统一度量衡诏书，制定了一套严格的管理制度，商代牙尺为中国2000多年封建社会的度量衡制奠定了基础。
-        </p>
-        <p>
-            项目背景：百度商业产品线所有产品的设计没有统一的设计规范，导致同系列产品经由不同团队进行设计开发之后，产品规范方面存在严重的不统一，后续的规范确定和解释需要消耗大量的工作量；前端开发并没有一套统一的规范控件和标准，导致不同团队面对相同功能代码得不到复用，每次需要重新开发，导致消耗了大量工作量，减缓了项目进度；
-        </p>
-        <p>
-            目标定位：统一产品交互，视觉规范，统一前端交互框架；
+            ESF是一个样式框架，它基于est。为开发者提供了一套可以简单定制的CSS样式。
         </p>
     </body>
 </html>
